--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -1896,8 +1896,22 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ot7-v8-W5i" userLabel="content-view">
                                 <rect key="frame" x="16" y="64" width="343" height="603"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N35-Mx-TSz">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dQA-fu-mY3" customClass="GZEChatActionView" customModule="Gooze" customModuleProvider="target">
+                                                <rect key="frame" x="146.5" y="10" width="50" height="30"/>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="dQA-fu-mY3" firstAttribute="top" secondItem="N35-Mx-TSz" secondAttribute="top" constant="10" id="Cbc-Rg-jTT"/>
+                                            <constraint firstAttribute="height" constant="50" id="LEs-8k-Gp8"/>
+                                            <constraint firstItem="dQA-fu-mY3" firstAttribute="centerX" secondItem="N35-Mx-TSz" secondAttribute="centerX" id="dzv-1S-5aS"/>
+                                            <constraint firstAttribute="bottom" secondItem="dQA-fu-mY3" secondAttribute="bottom" constant="10" id="meS-fZ-K8x"/>
+                                        </constraints>
+                                    </view>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Sjn-qM-qlR" customClass="GZEPaymentCollectionView" customModule="Gooze" customModuleProvider="target">
-                                        <rect key="frame" x="5" y="20" width="333" height="523"/>
+                                        <rect key="frame" x="5" y="50" width="333" height="493"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Za4-Do-WZ1">
                                             <size key="itemSize" width="50" height="50"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -1921,12 +1935,15 @@
                                     </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="N35-Mx-TSz" firstAttribute="top" secondItem="ot7-v8-W5i" secondAttribute="top" id="0B0-1y-7xy"/>
                                     <constraint firstItem="4P5-c3-bwQ" firstAttribute="centerX" secondItem="ot7-v8-W5i" secondAttribute="centerX" id="FrW-Ig-ebk"/>
                                     <constraint firstAttribute="trailing" secondItem="Sjn-qM-qlR" secondAttribute="trailing" constant="5" id="ObY-Oj-Dc8"/>
-                                    <constraint firstItem="Sjn-qM-qlR" firstAttribute="top" secondItem="ot7-v8-W5i" secondAttribute="top" constant="20" id="hhc-at-LMB"/>
+                                    <constraint firstAttribute="trailing" secondItem="N35-Mx-TSz" secondAttribute="trailing" id="jWU-G2-Aun"/>
+                                    <constraint firstItem="Sjn-qM-qlR" firstAttribute="top" secondItem="N35-Mx-TSz" secondAttribute="bottom" id="rmO-Qg-pzD"/>
                                     <constraint firstAttribute="bottom" secondItem="4P5-c3-bwQ" secondAttribute="bottom" constant="20" id="sFA-kH-3Tl"/>
                                     <constraint firstItem="4P5-c3-bwQ" firstAttribute="top" secondItem="Sjn-qM-qlR" secondAttribute="bottom" constant="10" id="sfa-N7-fc1"/>
                                     <constraint firstItem="Sjn-qM-qlR" firstAttribute="leading" secondItem="ot7-v8-W5i" secondAttribute="leading" constant="5" id="x14-hx-1Q7"/>
+                                    <constraint firstItem="N35-Mx-TSz" firstAttribute="leading" secondItem="ot7-v8-W5i" secondAttribute="leading" id="zaC-ep-DCu"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -1945,6 +1962,7 @@
                     <connections>
                         <outlet property="bottomActionButton" destination="4P5-c3-bwQ" id="BXj-aj-fTM"/>
                         <outlet property="paymentsCollectionView" destination="Sjn-qM-qlR" id="Kd6-Ld-CXJ"/>
+                        <outlet property="topActionView" destination="dQA-fu-mY3" id="KHc-hu-1Na"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vem-A2-nQU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3486,9 +3504,9 @@
         <image name="searching-radius-small" width="210" height="210"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="aoX-cG-RKK"/>
-        <segue reference="uRz-tZ-uiL"/>
-        <segue reference="R1T-5h-Xv7"/>
+        <segue reference="ado-a7-Lxa"/>
+        <segue reference="ZKk-02-86h"/>
+        <segue reference="n0C-k6-0IU"/>
         <segue reference="YiG-yX-aa5"/>
         <segue reference="be1-y5-0kc"/>
         <segue reference="e66-sX-XQT"/>
