--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -1832,21 +1832,20 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="vri-vQ-5kC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rIi-L8-22F">
-                                <rect key="frame" x="24" y="94" width="327" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="t7x-X1-oo5">
-                                <rect key="frame" x="24" y="154" width="327" height="200"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RiU-iN-f31">
+                                <rect key="frame" x="24" y="64" width="327" height="603"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0m6-q3-fyf" customClass="GZEDoubleCtrlView" customModule="Gooze" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="327" height="301.5"/>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="liz-1M-tuO"/>
+                                    <constraint firstAttribute="trailing" secondItem="0m6-q3-fyf" secondAttribute="trailing" id="UVf-aC-chb"/>
+                                    <constraint firstItem="0m6-q3-fyf" firstAttribute="top" secondItem="RiU-iN-f31" secondAttribute="top" id="XhB-Dr-jHA"/>
+                                    <constraint firstItem="0m6-q3-fyf" firstAttribute="height" secondItem="RiU-iN-f31" secondAttribute="height" multiplier="0.5" id="abx-SR-EEC"/>
+                                    <constraint firstItem="0m6-q3-fyf" firstAttribute="leading" secondItem="RiU-iN-f31" secondAttribute="leading" id="zm9-h0-8lW"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oIa-Je-Z5K" customClass="GZEButton" customModule="Gooze" customModuleProvider="target">
                                 <rect key="frame" x="164" y="617" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
@@ -1855,28 +1854,25 @@
                         <color key="backgroundColor" white="0.22" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="XYu-YS-4MJ" firstAttribute="top" secondItem="vri-vQ-5kC" secondAttribute="bottom" id="1Yq-Je-DCo"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="t7x-X1-oo5" secondAttribute="trailing" constant="8" id="3XZ-Rs-1QR"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="rIi-L8-22F" secondAttribute="trailing" constant="8" id="3gb-at-6tU"/>
                             <constraint firstItem="oIa-Je-Z5K" firstAttribute="centerX" secondItem="fCx-Vg-pdW" secondAttribute="centerX" id="EAb-cr-HCh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RiU-iN-f31" secondAttribute="trailing" constant="8" id="NeA-Gr-nh3"/>
+                            <constraint firstItem="RiU-iN-f31" firstAttribute="leading" secondItem="fCx-Vg-pdW" secondAttribute="leadingMargin" constant="8" id="R7P-qF-Zkl"/>
                             <constraint firstAttribute="trailing" secondItem="vri-vQ-5kC" secondAttribute="trailing" id="RY8-yM-ak8"/>
                             <constraint firstItem="XYu-YS-4MJ" firstAttribute="top" secondItem="oIa-Je-Z5K" secondAttribute="bottom" constant="20" id="UNc-WB-qSJ"/>
-                            <constraint firstItem="t7x-X1-oo5" firstAttribute="leading" secondItem="fCx-Vg-pdW" secondAttribute="leadingMargin" constant="8" id="Uwn-WA-NWP"/>
                             <constraint firstItem="vri-vQ-5kC" firstAttribute="top" secondItem="fCx-Vg-pdW" secondAttribute="top" id="VBb-1K-9WI"/>
-                            <constraint firstItem="rIi-L8-22F" firstAttribute="top" secondItem="uXB-ll-BNy" secondAttribute="bottom" constant="30" id="cen-Dx-hwu"/>
-                            <constraint firstItem="rIi-L8-22F" firstAttribute="leading" secondItem="fCx-Vg-pdW" secondAttribute="leadingMargin" constant="8" id="lcn-h1-4Ly"/>
+                            <constraint firstItem="XYu-YS-4MJ" firstAttribute="top" secondItem="RiU-iN-f31" secondAttribute="bottom" id="ciI-vh-y0E"/>
+                            <constraint firstItem="RiU-iN-f31" firstAttribute="top" secondItem="uXB-ll-BNy" secondAttribute="bottom" id="d9h-Ap-Sft"/>
                             <constraint firstItem="vri-vQ-5kC" firstAttribute="leading" secondItem="fCx-Vg-pdW" secondAttribute="leading" id="lw7-5e-MDI"/>
-                            <constraint firstItem="t7x-X1-oo5" firstAttribute="top" secondItem="rIi-L8-22F" secondAttribute="bottom" constant="30" id="sqw-b6-8EU"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="bodyTextView" destination="t7x-X1-oo5" id="d8Q-r6-MpT"/>
                         <outlet property="bottomButton" destination="oIa-Je-Z5K" id="Syo-k7-k1E"/>
-                        <outlet property="subjectTextField" destination="rIi-L8-22F" id="Wxw-xS-zKb"/>
+                        <outlet property="dblCtrlView" destination="0m6-q3-fyf" id="wxb-yf-prj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rgS-qW-rrm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4004" y="2867"/>
+            <point key="canvasLocation" x="4004" y="2866.4167916041979"/>
         </scene>
         <!--Payment Methods View Controller-->
         <scene sceneID="rqN-QR-aNu">
