Make 5 searches until Goozes are found.

--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -3512,9 +3512,9 @@
         <image name="searching-radius-small" width="210" height="210"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ado-a7-Lxa"/>
+        <segue reference="aoX-cG-RKK"/>
         <segue reference="uRz-tZ-uiL"/>
-        <segue reference="n0C-k6-0IU"/>
+        <segue reference="R1T-5h-Xv7"/>
         <segue reference="YiG-yX-aa5"/>
         <segue reference="be1-y5-0kc"/>
         <segue reference="e66-sX-XQT"/>
