Show confirmation dialog when trying to cancel a date

--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -3516,9 +3516,9 @@
         <image name="searching-radius-small" width="210" height="210"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="aoX-cG-RKK"/>
+        <segue reference="ado-a7-Lxa"/>
         <segue reference="dzk-j8-Wul"/>
-        <segue reference="R1T-5h-Xv7"/>
+        <segue reference="n0C-k6-0IU"/>
         <segue reference="XJg-fM-c9J"/>
         <segue reference="be1-y5-0kc"/>
         <segue reference="3gu-Js-oOo"/>
