--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -3514,7 +3514,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="aoX-cG-RKK"/>
-        <segue reference="dzk-j8-Wul"/>
+        <segue reference="uRz-tZ-uiL"/>
         <segue reference="R1T-5h-Xv7"/>
         <segue reference="XJg-fM-c9J"/>
         <segue reference="7Qg-7B-R48"/>
